--- a/package.json
+++ b/package.json
@@ -9,13 +9,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@types/react": "^18.0.28",
+    "@types/react-native": "^0.71.3",
     "expo": "~48.0.4",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.3"
+    "react-native": "0.71.3",
+    "react-native-elements": "^3.4.3",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1",
+    "redux-saga": "^1.2.2",
+    "typescript": "^4.9.5",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react-native-elements": "^0.18.0"
   },
   "private": true
 }
